--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,8 +22,10 @@ set -g status-interval 1
 setw -g status-keys vi
 set -g status-keys vi
 
-#bind-key -t vi-copy 'v' begin-selection
-#bind-key -t vi-copy 'y' copy-selection
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 ## focus events enabled for terminals that support them
 set -g focus-events on
@@ -184,7 +186,6 @@ set -g default-terminal "screen-256color"  # Tested with tmux 2.5
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g @shell_mode 'vi'
-set -g @yank_selection 'primary'
 
 # Plugins ---------------------------{
 set -g @plugin 'tmux-plugins/tpm'
@@ -200,6 +201,8 @@ set -g @plugin 'odedlaz/tmux-status-variables'
 # set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tmux-open'
 # ---------------------------------}
+
+set -g @yank_selection 'primary'
 
 # Automatic tpm installation
 if "test ! -d ~/.tmux/plugins/tpm" \
