Autoloading display monitor + dynamic monitor detection

--- a/i3/config
+++ b/i3/config
@@ -83,7 +83,9 @@ workspace $ws9 output primary
 
 ## Screen Resolution and Layout
 #exec --no-startup-id ~/.i3/scripts/monitors.sh
-exec --no-startup-id autorandr --load default
+# Dynamic monitor detection
+exec --no-startup-id srandrd autorandr --load default
+# Disable Annoying Bell
 exec --no-startup-id xset b off
 
 # start a terminal
