Changes tmux prefix

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,8 +3,8 @@ set -g default-shell /bin/zsh
 
 ## Change Prefix ----{
 unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+set -g prefix `
+bind ` send-prefix
 # -----------}
 
 ## address vim mode switching delay (http://superuser.com/a/252717/65504)
