MPD zeroconf + bind to multiple audio servers (ALSA + PulseAudio + fifo)

--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -153,12 +153,12 @@ auto_update_depth "3"
 # If this setting is set to "yes", service information will be published with
 # Zeroconf / Avahi.
 #
-#zeroconf_enabled		"yes"
+zeroconf_enabled		"yes"
 #
 # The argument to this setting will be the Zeroconf / Avahi unique name for
 # this MPD server on the network.
 #
-#zeroconf_name			"Music Player"
+zeroconf_name			"klpanagi-music-server"
 #
 ###############################################################################
 
@@ -358,6 +358,11 @@ audio_output {
         # Optional
         #device        "iec958:CARD=Intel,DEV=0"
         #mixer_control "PCM"
+}
+
+audio_output {
+        type            "pulse"
+        name            "pulse audio"
 }
 ###############################################################################
 
