Tmux ressurect :metal:

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -202,7 +202,12 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'odedlaz/tmux-status-variables'
 # set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 # ---------------------------------}
+
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-strategy-nvim 'session'
 
 set -g @yank_selection 'primary'
 
