--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -343,7 +343,7 @@ input {
 #	name		"My Null Output"
 #	mixer_type      "none"			# optional
 #}
-#
+
 # The visualizer needs to use mpd's fifo output file to read in the audio stream.
 audio_output {
     type                    "fifo"
@@ -351,18 +351,29 @@ audio_output {
     path                    "/tmp/mpd.fifo"
     format                  "44100:16:2"
 }
-
-audio_output {
-        type          "alsa"
-        name          "ALSA sound card"
+#
+# audio_output {
+        # type          "alsa"
+        # name          "ALSA sound card"
         # Optional
-        #device        "iec958:CARD=Intel,DEV=0"
-        #mixer_control "PCM"
-}
+        # device        "iec958:CARD=Intel,DEV=0"
+        # mixer_control "PCM"
+# }
 
 audio_output {
         type            "pulse"
         name            "pulse audio"
+}
+
+# Steaming over http
+audio_output {
+    bind            "127.0.0.1"
+    type            "httpd"
+    name            "streamatron"
+    encoder         "lame"
+    format          "44100:16:1"
+    port             "8000"
+    bitrate         "128"
 }
 ###############################################################################
 
@@ -386,7 +397,7 @@ audio_output {
 # This setting sets the pre-amp used for files that do NOT have ReplayGain tags.
 # By default this setting is disabled.
 #
-#replaygain_missing_preamp	"0"
+# replaygain_missing_preamp	"0"
 #
 # This setting enables or disables ReplayGain limiting.
 # MPD calculates actual amplification based on the ReplayGain tags
