Tmux resurrect restore shell history

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -206,6 +206,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # ---------------------------------}
 
 set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-save-shell-history 'on'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
 
