Set PulseAudio as default

--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -344,6 +344,11 @@ input {
 #	mixer_type      "none"			# optional
 #}
 
+audio_output {
+        type            "pulse"
+        name            "PulseAudio"
+}
+
 # The visualizer needs to use mpd's fifo output file to read in the audio stream.
 audio_output {
     type                    "fifo"
@@ -351,30 +356,23 @@ audio_output {
     path                    "/tmp/mpd.fifo"
     format                  "44100:16:2"
 }
-#
+
 # audio_output {
         # type          "alsa"
         # name          "ALSA sound card"
-        # Optional
-        # device        "iec958:CARD=Intel,DEV=0"
-        # mixer_control "PCM"
 # }
 
-audio_output {
-        type            "pulse"
-        name            "pulse audio"
-}
 
 # Steaming over http
-audio_output {
-    bind            "127.0.0.1"
-    type            "httpd"
-    name            "streamatron"
-    encoder         "lame"
-    format          "44100:16:1"
-    port             "8000"
-    bitrate         "128"
-}
+# audio_output {
+    # bind            "127.0.0.1"
+    # type            "httpd"
+    # name            "streamatron"
+    # encoder         "lame"
+    # format          "44100:16:1"
+    # port             "8000"
+    # bitrate         "128"
+# }
 ###############################################################################
 
 
