--- a/polybar/config
+++ b/polybar/config
@@ -76,7 +76,7 @@ type = internal/fs
 interval = 25
 
 mount-0 = /
-;mount-1 = /home
+; mount-1 = /data
 ;mount-2 = /invalid/mountpoint
 
 label-mounted= / %free%
@@ -99,6 +99,7 @@ ws-icon-2 = 3;
 ws-icon-3 = 4;
 ws-icon-4 = 5;
 ws-icon-5 = 6;
+ws-icon-6 = 7;
 ws-icon-default = 
 
 label-mode = %mode%
