--- a/polybar/config
+++ b/polybar/config
@@ -504,7 +504,7 @@ label-separator-margin = 1
 
 menu-0-0 = Logout
 menu-0-0-foreground = ${colors.accent}
-menu-0-0-exec = i3exit
+menu-0-0-exec = i3-msg exit
 menu-0-1 = Reboot
 menu-0-1-foreground = ${colors.accent}
 menu-0-1-exec = menu-open-1
