--- a/i3/config
+++ b/i3/config
@@ -26,17 +26,6 @@ set $white       #f1edfb
 set $darkwhite   #f1edfb
 set $background  #133B47
 
-# set $ws1 "1:"
-# set $ws2 "2:"
-# set $ws3 "3:"
-# set $ws4 "4:"
-# set $ws5 "5:"
-# set $ws6 "6: 6"
-# set $ws7 "7: 7"
-# set $ws8 "8: 8"
-# set $ws9 "9:"
-# set $ws10 "10:"
-
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
@@ -268,6 +257,7 @@ assign [class="Mattermost"] $ws5
 assign [class="Terminator"] $ws1
 assign [class="Termite"] $ws1
 assign [class="FoxitReader"] $ws7
+assign [class="libreoffice-startcenter|Soffice"] $ws7
 
 # Open specific applications in floating mode
 for_window [title="alsamixer"] floating enable border pixel 1
@@ -275,6 +265,7 @@ for_window [class="Calamares"] floating enable border normal
 for_window [class="Clipgrab"] floating enable
 for_window [title="File Transfer*"] floating enable
 for_window [class="Galculator"] floating enable border pixel 1
+for_window [class="Calculator"] floating enable border pixel 1
 for_window [class="GParted"] floating enable border normal
 for_window [title="i3_help"] floating enable sticky enable border normal
 for_window [class="Lightdm-gtk-greeter-settings"] floating enable
