--- a/termite/default.config
+++ b/termite/default.config
@@ -9,7 +9,7 @@
     dynamic_title = true
     urgent_on_bell = true
     clickable_url = true
-    font = Source Code Pro for Powerline 9
+    font =  Fira Code 9
     scrollback_lines = 1000
     search_wrap = true
     cursor_blink = system
