Fix time presentation

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -63,7 +63,7 @@ path_exists VPN {
 
 tztime local {
   # format = "%Y-%m-%d %H:%M:%S"
-  format = " %h %d, %Y  %I:%M:%S"
+  format = " %h %d, %Y  %H:%M"
 }
 
 
