Fixes new window following current pane path option

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -53,8 +53,8 @@ set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set-window-option -g monitor-activity on
 # Renumber windows when a window is closed
 set -g renumber-windows on
-set-window-option -g automatic-rename off
-set-option -g allow-rename off
+set-window-option -g automatic-rename on
+set-option -g allow-rename on
 # -----------------------------}
 
 ## Pane Configurations --------{
@@ -87,8 +87,8 @@ bind \ split-window -h -c '#{pane_current_path}' # Split panes horizontal
 bind - split-window -v -c '#{pane_current_path}' # Split panes vertically
 
 #urxvt tab like window switching (-n: no prior escape seq)
-bind down new-window -c '#{pan_current_path}'
-bind c new-window -c '#{pan_current_path}'
+bind down new-window -c '#{pane_current_path}'
+bind c new-window -c '#{pane_current_path}'
 bind left prev
 bind right next
 # bind -n C-left swap-window -t -1
