--- a/spacevim/init.full.toml
+++ b/spacevim/init.full.toml
@@ -12,6 +12,7 @@
     # if you want to use more colorscheme, please load the colorscheme
     # layer
     colorscheme = "base16-material"
+    # colorscheme = "base16-material-darker"
     background = "dark"
     # Disable guicolors in basic mode, many terminal do not support 24bit
     # true colors
