More global way to load xrandr configuration generated by arandr

--- a/i3/config
+++ b/i3/config
@@ -73,7 +73,8 @@ workspace $ws9 output primary
 ## Screen Resolution and Layout
 #exec --no-startup-id ~/.i3/scripts/monitors.sh
 # Dynamic monitor detection
-exec --no-startup-id autorandr --load default
+# exec --no-startup-id autorandr --load default
+exec --no-startup-id ~/.screenlayout/default.sh
 # Disable Annoying Bell
 exec --no-startup-id xset b off
 
