--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -10,7 +10,7 @@
 # be disabled and audio files will only be accepted over ipc socket (using
 # file:// protocol) or streaming files over an accepted protocol.
 #
-music_directory		"/data/music"
+music_directory		"~/Music"
 #
 # This setting sets the MPD internal playlist directory. The purpose of this
 # directory is storage for playlists created by MPD. The server will use 
@@ -208,15 +208,15 @@ input {
 #
 # An example of an ALSA output:
 #
-#audio_output {
-#	type		"alsa"
-#	name		"My ALSA Device"
-##	device		"hw:0,0"	# optional
-##	mixer_type      "hardware"	# optional
-##	mixer_device	"default"	# optional
-##	mixer_control	"PCM"		# optional
-##	mixer_index	"0"		# optional
-#}
+audio_output {
+  type		"alsa"
+  name		"My ALSA Device"
+#	device		"hw:0,0"	# optional
+#	mixer_type      "hardware"	# optional
+#	mixer_device	"default"	# optional
+#	mixer_control	"PCM"		# optional
+#	mixer_index	"0"		# optional
+}
 #
 # An example of an OSS output:
 #
@@ -266,19 +266,19 @@ input {
 #
 # An example of a httpd output (built-in HTTP streaming server):
 #
-audio_output {
-    type		"httpd"
-    name		"My HTTP Stream"
-    encoder		"lame"		# optional, vorbis or lame
-    port		"8000"
-    bind_to_address	"0.0.0.0"		# optional, IPv4 or IPv6
-#	quality		"5.0"			# do not define if bitrate is defined
-    bitrate		"128"			# do not define if quality is defined
-    format		"44100:16:1"
-    max_clients	"0"			# optional 0=no limit
-	mount		"/stream"
-##	timeout		"2"			# optional
-}
+# audio_output {
+    # type		"httpd"
+    # name		"My HTTP Stream"
+    # encoder		"lame"		# optional, vorbis or lame
+    # port		"8000"
+    # bind_to_address	"0.0.0.0"		# optional, IPv4 or IPv6
+  # quality		"5.0"			# do not define if bitrate is defined
+    # bitrate		"128"			# do not define if quality is defined
+    # format		"44100:16:1"
+    # max_clients	"0"			# optional 0=no limit
+	# mount		"/stream"
+#	timeout		"2"			# optional
+# }
 #
 # An example of a pulseaudio output (streaming to a remote pulseaudio server)
 #
@@ -346,10 +346,10 @@ audio_output {
 #	mixer_type      "none"			# optional
 #}
 
-audio_output {
-        type            "pulse"
-        name            "PulseAudio"
-}
+# audio_output {
+        # type            "pulse"
+        # name            "PulseAudio"
+# }
 
 # The visualizer needs to use mpd's fifo output file to read in the audio stream.
 audio_output {
