Change font family

--- a/termite/default.config
+++ b/termite/default.config
@@ -9,7 +9,7 @@
     dynamic_title = true
     urgent_on_bell = true
     clickable_url = true
-    font = Noto Sans Mono 9
+    font =  FantasqueSansMono Nerd Font Mono 10
     scrollback_lines = 1000
     search_wrap = true
     cursor_blink = system
