--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,6 +27,9 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
+# set -g set-clipboard on
+# bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
+
 ## focus events enabled for terminals that support them
 set -g focus-events on
 
@@ -210,7 +213,8 @@ set -g @resurrect-save-shell-history 'on'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
 
-set -g @yank_selection 'primary'
+# set -g @yank_selection 'primary'
+set -g @yank_selection 'clipboard'
 
 # Automatic tpm installation
 if "test ! -d ~/.tmux/plugins/tpm" \
