Mouse yank to clipboard

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -215,6 +215,7 @@ set -g @resurrect-strategy-nvim 'session'
 
 # set -g @yank_selection 'primary'
 set -g @yank_selection 'clipboard'
+set -g @yank_selection_mouse 'clipboard'
 
 # Automatic tpm installation
 if "test ! -d ~/.tmux/plugins/tpm" \
