--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -206,6 +206,7 @@ set -g @plugin 'odedlaz/tmux-status-variables'
 # set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-fpp'
 # ---------------------------------}
 
 set -g @resurrect-capture-pane-contents 'on'
@@ -216,6 +217,8 @@ set -g @resurrect-strategy-nvim 'session'
 # set -g @yank_selection 'primary'
 set -g @yank_selection 'clipboard'
 set -g @yank_selection_mouse 'clipboard'
+
+set -g @fpp-key 'F'
 
 # Automatic tpm installation
 if "test ! -d ~/.tmux/plugins/tpm" \
