--- a/i3/config
+++ b/i3/config
@@ -88,7 +88,7 @@ bindsym $mod+x kill
 # bindsym $mod+d exec --no-startup-id dmenu_recency
 # rofi bindings
 bindsym F9  exec rofi -show run
-bindsym F10 exec rofi -show drun
+bindsym F10 exec rofi -modi run -show drun -location 1 -xoffset 10 -yoffset 32 -line-padding 4 -columns 1 -width 20 -lines 10 -padding 25 -hide-scrollbar -show-icons -drun-icon-theme "Papirus"
 bindsym F12 exec rofi -show window
 bindsym $mod+i exec ~/.i3/scripts/i3_switch_workspace.sh
 
