--- a/polybar/polybar-2/bars.ini
+++ b/polybar/polybar-2/bars.ini
@@ -539,10 +539,10 @@ icon-prev = 
 icon-next = 
 icon-seekb = ⏪
 icon-seekf = ⏩
-icon-random = 🔀
-icon-repeat = 🔁
-icon-repeatone = 🔂
-icon-single = 🔂
+icon-random = 
+icon-repeat = 
+icon-repeatone = 
+icon-single = 
 icon-consume = ✀
 
 ; Used to display the state of random/repeat/repeatone/single
