--- a/polybar/polybar-2/config.ini
+++ b/polybar/polybar-2/config.ini
@@ -183,17 +183,22 @@ inherit = bar/main
 ; wm-restack = i3
 ; override-redirect = true
 
-modules-left = menu title right-end-top left-end-bottom i3 right-end-top left-end-bottom colors-switch right-end-top
-modules-right = left-end-top updates right-end-bottom left-end-top temperature battery right-end-bottom left-end-top date right-end-bottom left-end-top keyboard sysmenu
+; modules-left = menu right-end-top left-end-bottom i3 right-end-top left-end-bottom colors-switch right-end-top
+modules-left = menu i3 colors-switch
+; modules-right = left-end-top updates right-end-bottom left-end-top temperature battery right-end-bottom left-end-top date right-end-bottom left-end-top keyboard sysmenu
+modules-right = updates temperature battery date keyboard sysmenu
+modules-center = title
 enable-ipc = true
 
 [bar/bottom]
 inherit = bar/main
 bottom = true
 
-modules-left = mpd right-end-bottom left-end-top cpu memory filesystem right-end-bottom 
-modules-right = left-end-bottom network right-end-top left-end-bottom volume brightness right-end-top left-end-bottom
-; modules-center = left-end-bottom mpd right-end-top
+; modules-left = mpd right-end-bottom left-end-top cpu memory filesystem right-end-bottom
+modules-center = mpd cpu memory filesystem
+; modules-right = left-end-bottom network right-end-top left-end-bottom volume brightness right-end-top left-end-bottom
+modules-right = network volume brightness
+modules-left = mpd
 
 enable-ipc = true
 
@@ -207,7 +212,7 @@ tray-scale = ${layout.tray-scale}
 
 ;; layout 
 [layout]
-module-padding = 1
+module-padding = 3
 
 ;; Bars
 icon-font = 2
@@ -220,7 +225,7 @@ separator =
 
 ; This value is used to add extra spacing between elements
 ; @deprecated: This parameter will be removed in an upcoming version
-spacing = 0
+spacing = 1
 
 ; Opacity value between 0.0 and 1.0 used on fade in/out
 dim-value = 1.0
@@ -251,7 +256,7 @@ tray-position = right
 tray-detached = false
 
 ; Tray icon max size
-tray-maxsize = 16
+tray-maxsize = 22
 
 ; DEPRECATED! Since 3.3.0 the tray always uses pseudo-transparency
 ; Enable pseudo transparency
@@ -270,7 +275,7 @@ tray-offset-x = 0
 tray-offset-y = 0
 
 ; Pad the sides of each tray icon
-tray-padding = 0
+tray-padding = 1
 
 ; Scale factor for tray clients
 tray-scale = 1.0
@@ -296,8 +301,8 @@ wm-restack = i3
 
 ; Fallback click handlers that will be called if
 ; there's no matching module handler found.
-click-left = 
-click-middle = 
+click-left =
+click-middle =
 click-right =
 scroll-up =
 scroll-down =
@@ -310,8 +315,8 @@ double-click-right =
 ; - default   : The default pointer as before, can also be an empty string (default)
 ; - pointer   : Typically in the form of a hand
 ; - ns-resize : Up and down arrows, can be used to indicate scrolling
-cursor-click = 
-cursor-scroll = 
+cursor-click =
+cursor-scroll =
 
 ;; WM Workspace Specific
 
@@ -362,8 +367,8 @@ compositing-underline = over
 compositing-border = over
 
 ; Define fallback values used by all module formats
-format-foreground = 
-format-background = 
+format-foreground =
+format-background =
 format-underline =
 format-overline =
 format-spacing =
