--- a/polybar/polybar-2/colors.ini
+++ b/polybar/polybar-2/colors.ini
@@ -13,17 +13,17 @@
 [color]
 
 ;; Active Colors
-bg = #8c0a0a0a
-fg = #f5f5f5
+bg = #8c263238
+fg = #DFDFDF
 ac = #d26273
 
-mb = #0a0a0a
-mgf = #0a0a0a
-mf = #fdd835
+mb = #263238
+mgf = #263238
+mf = #00BCD4
  
 ;; Bars
-bi = #dc404040
-be = #dc404040
+bi = #dc344148
+be = #dc344148
 bf = #43a047
 bn = #43a047
 bm = #fdd835
