--- a/polybar/polybar-2/modules.ini
+++ b/polybar/polybar-2/modules.ini
@@ -445,7 +445,7 @@ type = internal/fs
 
 ; Mountpoints to display
 mount-0 = /
-;;mount-1 = /home
+mount-1 = /home
 ;;mount-2 = /var
 
 ; Seconds to sleep between updates
@@ -487,7 +487,7 @@ format-unmounted-padding = ${layout.module-padding}
 ;   %free%
 ;   %used%
 ; Default: %mountpoint% %percentage_free%%
-label-mounted = " %free%"
+label-mounted = "%mountpoint% %free%"
 
 ; Available tokens:
 ;   %mountpoint%
@@ -816,7 +816,7 @@ interface = wlp0s20f0u2
 ; Normal Module
 [module/network]
 type = internal/network
-interface = wlp0s20f0u2
+interface = wlp0s20f0u1
 
 ; Seconds to sleep between updates
 ; Default: 1
