--- a/polybar/polybar-2/config.ini
+++ b/polybar/polybar-2/config.ini
@@ -122,8 +122,8 @@ padding = 0
 ; Number of spaces to add before/after each module
 ; Individual side values can be defined using:
 ;   module-margin-{left,right}
-module-margin-left = 0
-module-margin-right = 0
+module-margin-left = 1
+module-margin-right = 1
 
 ; Fonts are defined using <font-name>;<vertical-offset>
 ; Font names are specified using a fontconfig pattern.
@@ -184,7 +184,7 @@ inherit = bar/main
 ; override-redirect = true
 
 ; modules-left = menu right-end-top left-end-bottom i3 right-end-top left-end-bottom colors-switch right-end-top
-modules-left = menu i3 colors-switch
+modules-left = menu colors-switch i3
 ; modules-right = left-end-top updates right-end-bottom left-end-top temperature battery right-end-bottom left-end-top date right-end-bottom left-end-top keyboard sysmenu
 modules-right = updates temperature battery date keyboard sysmenu
 modules-center = title
@@ -275,7 +275,7 @@ tray-offset-x = 0
 tray-offset-y = 0
 
 ; Pad the sides of each tray icon
-tray-padding = 1
+tray-padding = 3
 
 ; Scale factor for tray clients
 tray-scale = 1.0
