--- a/polybar/polybar-2/user_modules.ini
+++ b/polybar/polybar-2/user_modules.ini
@@ -301,8 +301,8 @@ click-left = ~/.config/polybar/scripts/color-switch.sh &
 click-right = ~/.config/polybar/scripts/color-switch.sh &
 
 ; "scroll-(up|down)" will be executed using "/usr/bin/env sh -c $COMMAND"
-;;scroll-up = ~/.config/polybar/scripts/powermenu
-;;scroll-down = ~/.config/polybar/scripts/powermenu
+; scroll-up = ~/.config/polybar/scripts/powermenu
+; scroll-down = ~/.config/polybar/scripts/powermenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
