Remove duplicate mpd entry from bottom bar

--- a/polybar/polybar-2/config.ini
+++ b/polybar/polybar-2/config.ini
@@ -195,7 +195,7 @@ inherit = bar/main
 bottom = true
 
 ; modules-left = mpd right-end-bottom left-end-top cpu memory filesystem right-end-bottom
-modules-center = mpd cpu memory filesystem
+modules-center = cpu memory filesystem
 ; modules-right = left-end-bottom network right-end-top left-end-bottom volume brightness right-end-top left-end-bottom
 modules-right = network volume brightness
 modules-left = mpd
