--- a/polybar/polybar-2/modules.ini
+++ b/polybar/polybar-2/modules.ini
@@ -445,7 +445,7 @@ type = internal/fs
 
 ; Mountpoints to display
 mount-0 = /
-mount-1 = /home
+;;mount-1 = /home
 ;;mount-2 = /var
 
 ; Seconds to sleep between updates
@@ -816,7 +816,7 @@ interface = wlp0s20f0u2
 ; Normal Module
 [module/network]
 type = internal/network
-interface = wlp0s20f0u1
+interface = wlp3s0
 
 ; Seconds to sleep between updates
 ; Default: 1
@@ -846,7 +846,7 @@ unknown-as-up = true
 ; Available tags:
 ;   <label-connected> (default)
 ;   <ramp-signal>
-format-connected = <ramp-signal> <label-connected>
+format-connected = <label-connected>
 format-connected-background = ${color.mb}
 format-connected-padding = ${layout.module-padding}
 ; Available tags:
@@ -870,7 +870,7 @@ format-disconnected-padding = ${layout.module-padding}
 ;   %downspeed% [wireless+wired]
 ;   %linkspeed% [wired]
 ; Default: %ifname% %local_ip%
-label-connected = "%essid% %downspeed:8% %upspeed:8%"
+label-connected = "%downspeed:8% %upspeed:8%"
 ;;label-connected-foreground = #eefafafa
 
 ; Available tokens:
