--- a/polybar/polybar-2/config.ini
+++ b/polybar/polybar-2/config.ini
@@ -186,7 +186,7 @@ inherit = bar/main
 ; modules-left = menu right-end-top left-end-bottom i3 right-end-top left-end-bottom colors-switch right-end-top
 modules-left = menu colors-switch i3
 ; modules-right = left-end-top updates right-end-bottom left-end-top temperature battery right-end-bottom left-end-top date right-end-bottom left-end-top keyboard sysmenu
-modules-right = updates temperature battery date keyboard sysmenu
+modules-right = updates temperature battery checknetwork date keyboard sysmenu
 modules-center = title
 enable-ipc = true
 
@@ -195,9 +195,9 @@ inherit = bar/main
 bottom = true
 
 ; modules-left = mpd right-end-bottom left-end-top cpu memory filesystem right-end-bottom
-modules-center = cpu memory filesystem
+modules-center = cpu memory filesystem network
 ; modules-right = left-end-bottom network right-end-top left-end-bottom volume brightness right-end-top left-end-bottom
-modules-right = network volume brightness
+modules-right = volume brightness
 modules-left = mpd
 
 enable-ipc = true
@@ -212,7 +212,7 @@ tray-scale = ${layout.tray-scale}
 
 ;; layout 
 [layout]
-module-padding = 3
+module-padding = 1
 
 ;; Bars
 icon-font = 2
@@ -275,7 +275,7 @@ tray-offset-x = 0
 tray-offset-y = 0
 
 ; Pad the sides of each tray icon
-tray-padding = 3
+tray-padding = 1
 
 ; Scale factor for tray clients
 tray-scale = 1.0
